fixed new project section buttons on mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -176,7 +176,7 @@
   text-transform: uppercase;
   letter-spacing: .15rem;
   border: 0;
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 
 
